<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_map_view"
        android:title="@string/map_view"
        android:icon="@drawable/ic_map"
        app:showAsAction="always|withText"
        />

    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/login"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="101"
        android:title="@string/help"
        app:showAsAction="never" />
</menu>
