<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/event_categories">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/all"
                    android:icon="@drawable/ic_list"
                    android:title="All" />
                <item
                    android:id="@+id/club_meetings"
                    android:icon="@drawable/ic_people"
                    android:title="Club Meetings" />
                <item
                    android:id="@+id/concerts"
                    android:icon="@drawable/ic_headphones"
                    android:title="Concerts" />
                <item
                    android:id="@+id/fundraisers"
                    android:icon="@drawable/ic_envelope"
                    android:title="Fundraisers" />
                <item
                    android:id="@+id/movies"
                    android:icon="@drawable/ic_video_camera"
                    android:title="Movies" />
                <item
                    android:id="@+id/sports"
                    android:icon="@drawable/ic_thumbs_up"
                    android:title="Sports" />
                <item
                    android:id="@+id/study_groups"
                    android:icon="@drawable/ic_pencil"
                    android:title="Study Groups" />
            </group>
        </menu>
    </item>

    <item android:title="@string/my_account">
        <menu>
            <item
                android:id="@+id/my_events"
                android:icon="@drawable/ic_star"
                android:title="@string/my_events" />
            <item
                android:id="@+id/my_help"
                android:icon="@drawable/ic_question"
                android:title="@string/help" />
        </menu>
    </item>

</menu>
